重构hive demo